# batterydays-2025

./: .gitignore  00_introduction.ipynb  01_loading_data.ipynb  02_Initial_data_inspection.ipynb  03_capacity_vs_voltage.ipynb  04_incremental_capacity_analysis.ipynb  05_GITT.ipynb  06_loading_different_formats.ipynb  07_custom_loaders.ipynb  LICENSE  README.md  pyproject.toml
