[project]
name = "batterydays-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cellpy",
    "ipywidgets>=8.1.7",
    "kaleido==0.1.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "rich>=14.0.0",
    "sqlalchemy-access>=2.0.3",
]

[tool.uv.sources]
cellpy = { path = "../../cellpy", editable = true }
